# pyston_v1

./: .gitignore  .gitmodules  .travis.yml  .vimrc.dir  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.llvmconfig  README.md  Vagrantfile  class_and_func_name.py  config.h.in  hacked_virtualenv_site.py  llvm_revision.txt  pyston_gdbinit.txt  section_ordering.txt  virtualenv.py
from_cpython/: CMakeLists.txt  LICENSE  setup.py
from_cpython/Include/: LICENSE  Python-ast.h  Python.h  abstract.h  ast.h  boolobject.h  bufferobject.h  bytearrayobject.h  bytes_methods.h  bytesobject.h  cStringIO.h  ceval.h  classobject.h  cobject.h  code.h  codecs.h  compile.h  complexobject.h  datetime.h  descrobject.h  dictobject.h  dtoa.h  eval.h  fileobject.h  floatobject.h  frameobject.h  funcobject.h  genobject.h  import.h  intobject.h  intrcheck.h  iterobject.h  listobject.h  longobject.h  marshal.h  memoryobject.h  methodobject.h  modsupport.h  moduleobject.h  object.h  (+32 more)
from_cpython/Lib/: StringIO.py  UserDict.py  _LWPCookieJar.py  _abcoll.py  _osx_support.py  _threading_local.py  bisect.py  codecs.py  collections.py  compileall.py  copy.py  csv.py  difflib.py  dis.py  inspect.py  locale.py  modulefinder.py  numbers.py  opcode.py  pickle.py  platform.py  py_compile.py  socket.py  sre_compile.py  ssl.py  sysconfig.py  tempfile.py  threading.py  traceback.py  types.py  urllib2.py  warnings.py  weakref.py
from_cpython/Modules/: _collectionsmodule.c  _csv.c  _cursesmodule.c  _elementtree.c  _functoolsmodule.c  _hashopenssl.c  _heapqmodule.c  _randommodule.c  _sre.c  _ssl.c  _struct.c  _tkinter.c  _weakref.c  almodule.c  arraymodule.c  binascii.c  bz2module.c  cPickle.c  cStringIO.c  datetimemodule.c  gcmodule.c  getpath.c  itertoolsmodule.c  mathmodule.c  parsermodule.c  posixmodule.c  pyexpat.c  readline.c  resource.c  selectmodule.c  signalmodule.c  socketmodule.c  socketmodule.h  threadmodule.c  timemodule.c  unicodedata.c  zipimport.c  zlibmodule.c
from_cpython/Objects/: abstract.c  bufferobject.c  bytearrayobject.c  bytes_methods.c  capsule.c  cobject.c  complexobject.c  descrobject.c  dictobject.c  dictproxy.c  exceptions.c  fileobject.c  floatobject.c  iterobject.c  listobject.c  memoryobject.c  obmalloc.c  sliceobject.c  stringobject.c  structseq.c  unicodectype.c  unicodeobject.c  unicodetype_db.h  weakrefobject.c
from_cpython/Parser/: acceler.c  myreadline.c  tokenizer.c
from_cpython/Python/: Python-ast.c  _warnings.c  dtoa.c  errors.c  formatter_string.c  formatter_unicode.c  getargs.c  import.c  marshal.c  pyarena.c  pyctype.c  random.c  structmember.c  traceback.c
lib_pyston/: CMakeLists.txt  _sysconfigdata.py  _sysconfigdata.py.in  cPickle.py  marshal.py
lib_python/: CMakeLists.txt  LICENSE
lib_python/2.7/: _abcoll.py  collections.py  os.py  re.py  types.py
lib_python/2.7_Modules/: operator.c  posixmodule.c
lib_python/2.7_Objects/: capsule.c  stringobject.c  structseq.c  unicodeobject.c
lib_python/2.7_Python/: dtoa.c  formatter_string.c  pystrtod.c
plugins/refcount_checker/: CMakeLists.txt  refcount_checker.cpp
src/: .clang-format  CMakeLists.txt  Makefile  deadlock_debug_helper.cpp  jit.cpp
src/analysis/: fpc.h  function_analysis.cpp  function_analysis.h  scoping_analysis.cpp  scoping_analysis.h  type_analysis.cpp  type_analysis.h
src/asm_writing/: assembler.cpp  assembler.h  disassemble.cpp  disassemble.h  icinfo.cpp  icinfo.h  mc_writer.cpp  mc_writer.h  rewriter.cpp  rewriter.h  rewriter2.cpp  rewriter2.h  types.h
src/capi/: abstract.cpp  codecs.cpp  descrobject.cpp  errors.cpp  float.cpp  getargs.cpp  modsupport.cpp  object.cpp  typeobject.cpp  typeobject.h  types.h
src/codegen/: ast_interpreter.cpp  ast_interpreter.h  ast_interpreter_exec.S  baseline_jit.cpp  baseline_jit.h  codegen.cpp  codegen.h  compvars.cpp  compvars.h  cpython_ast.cpp  cpython_ast.h  dis.cpp  dis.h  entry.cpp  entry.h  gcbuilder.cpp  gcbuilder.h  irgen.cpp  irgen.h  llvm_interpreter.cpp  llvm_interpreter.h  memmgr.cpp  memmgr.h  osrentry.h  parse_ast.py  parser.cpp  parser.h  patchpoints.cpp  patchpoints.h  pypa-parser.cpp  pypa-parser.h  runtime_hooks.cpp  runtime_hooks.h  serialize_ast.cpp  serialize_ast.h  stackmaps.cpp  stackmaps.h  type_recording.cpp  type_recording.h  unwinding.cpp  (+1 more)
src/core/: DenseMap.h  DenseSet.h  SmallVector.cpp  SmallVector.h  ast.cpp  ast.h  bst.cpp  bst.h  cfg.cpp  cfg.h  common.h  contiguous_map.h  hash.h  options.cpp  options.h  stats.cpp  stats.h  stringpool.cpp  stringpool.h  thread_utils.h  threading.cpp  threading.h  types.h  util.cpp  util.h
src/gc/: collector.cpp  collector.h  gc.h  gc_alloc.cpp  gc_alloc.h  heap.cpp  heap.h  root_finder.cpp  root_finder.h  roots.h
src/runtime/: bool.cpp  capi.cpp  capi.h  classobj.cpp  classobj.h  code.cpp  code.h  complex.cpp  complex.h  ctxswitching.S  ctxswitching.h  cxx_unwind.cpp  descr.cpp  dict.cpp  dict.h  exceptions.cpp  file.cpp  file.h  float.cpp  float.h  frame.cpp  gc_runtime.h  generator.cpp  generator.h  hiddenclass.cpp  hiddenclass.h  ics.cpp  ics.h  import.cpp  import.h  importing.cpp  importing.h  int.cpp  int.h  iterators.cpp  iterators.h  iterobject.cpp  iterobject.h  list.cpp  list.h  (+23 more)
test/test_extension/: CMakeLists.txt  api_test.c  basic_test.c  descr_test.c  setup.py  slots_test.c  test.c  type_test.c
test/unittests/: .gitignore  CMakeLists.txt  analysis.cpp  analysis_listcomp.py  gc.cpp  (+2 more)
tools/: CMakeLists.txt  annotate.py  astprint.cpp  astprint_test.sh  check_format.sh  check_stats.py  configure_travis.sh  cpython_merge_helper.py  cumulate.sh  demangle.cpp  determine_missing.py  do_format.sh  exception_stats.py  find_problem.py  generate_section_ordering_from_pgo_build.py  git_am_automated.py  git_svn_gotorev.py  ic_stats.py  lint.py  llvm_patchset_hash.sh  mcjitcache.cpp  measure_ics.py  measure_loc.py  measure_perf.py  perf_collect.sh  perf_diff.py  perf_jit.py  process_gc_trace.py  process_malloc_trace.py  process_mtrace_trace.py  process_stackdump.py  publicize.cpp  submit.py  tester.py  timer_diff.py  travis_get_llvm.sh  try_importing_all.py
(+1880 files in other folders)
